Fixes after own proof reading

--- a/thesis/CIBSAE.tex
+++ b/thesis/CIBSAE.tex
@@ -77,11 +77,11 @@
 
 \input{effects_in_theory}
 
-\chapter{O systemach kompilacji (i ich klasyfikacji)}
+\input{build_systems_a_la_carte}
 
 \input{effects_in_practise}
 
-\chapter{Systemy kompilacji z użyciem efektów algebraicznych i~uchwytów}
+\input{build_systems_using_effects}
 
 \chapter{Podsumowanie i wnioski}
 
