Use Helium listings language from popl20's tex

--- a/thesis/effects_in_practise.tex
+++ b/thesis/effects_in_practise.tex
@@ -22,7 +22,7 @@ Badania nad efektami i uchwytami przyczyniły się także do powstania kilku eks
 
 \section{Helium}
 
-\lstset{style=helium}
+\lstset{language=Haleff, showstringspaces=false}
 
 Używając właśnie języka Helium, zobaczymy jak w praktyce wygląda programowanie z efektami algebraicznymi oraz uchwytami, zaś w następnym rozdziale spróbujemy zaimplementować wyniki uzyskane w ,,Build systems {\`a} la carte'' \cite{mokhov2018build, mokhov2020build}. Po raz pierwszy Helium pojawia się w \cite{biernacki2019abstracting}, służąc za narzędzie do eksperymentowania i umożliwienia konstrukcji bardziej skomplikowanych przykładów oraz projektów w celu przetestowania efektów i uchwytów w praktyce.
 
