--- a/thesis/CIBSAE.tex
+++ b/thesis/CIBSAE.tex
@@ -45,28 +45,25 @@
 % ...
 %%%%%
 
-\definecolor{bluekeywords}{rgb}{0.13,0.13,1}
-\definecolor{greencomments}{rgb}{0,0.5,0}
-\definecolor{redstrings}{rgb}{0.9,0,0}
-
-\lstdefinestyle{helium}{
-  language=[Objective]Caml,
-  columns=fixed,
-  %% showspaces=false,
-  %% showtabs=false,
-  showstringspaces=false,
-  %% breakatwhitespace=true,
-  escapeinside={(*@}{@*)},
-  commentstyle=\color{greencomments},
-  keywordstyle=\color{bluekeywords},
-  stringstyle=\color{redstrings},
-  basicstyle=\ttfamily\small,%scriptsize,
-  mathescape=true,
-  literate={->}{$\rightarrow{}$}{1}
-           {=>}{$\Rightarrow{}$}{1}
-           %% {++}{+\kern-1.3ex+\kern0.8ex}{1}
-           {==}{$={}$}{1},
-  morekeywords={signature,handle,handler,resume,return,finally}
+\lstdefinelanguage{Haleff}{
+  morekeywords=[1]{forall, data, let, rec, and, in, val, type, Type, signature, effect, Effect, fn, if, then, else},
+  morekeywords=[2]{match, handle, handler, with, end, return, finally, open },
+%  lineskip=-0.1ex,
+  alsodigit=!\$\%&*+-./:<=>?@^_~,
+  sensitive=true,
+  morecomment=[l]{//},
+  morecomment=[s]{(*}{*)},
+  morestring=[b]",
+  basicstyle=\small\ttfamily,
+  keywordstyle=\bf\ttfamily\color[rgb]{0,.3,.7},
+  commentstyle=\color[rgb]{0.133,0.545,0.133},
+  stringstyle={\color[rgb]{0.75,0.49,0.07}},
+  upquote=true,
+  breaklines=true,
+  breakatwhitespace=true,
+  columns=fullflexible,
+  keepspaces=true,
+  literate=*{`}{{`}}{1}
 }
 
 \begin{document}
