--- a/thesis/CIBSAE.tex
+++ b/thesis/CIBSAE.tex
@@ -32,18 +32,42 @@
 \usepackage{cite}
 \usepackage{amsmath, amsfonts, amsthm}
 \usepackage{stmaryrd} % double brackets
-\usepackage{listings}
+\usepackage{listingsutf8}
 \usepackage[usenames,dvipsnames]{xcolor}
 
 %%%%% WŁASNE DEFINICJE I POLECENIA
 %
-%\theoremstyle{definition} \newtheorem{definition}{Definition}[chapter]
+\theoremstyle{definition} \newtheorem{definition}{Definition}[chapter]
 %\theoremstyle{remark} \newtheorem{remark}[definition]{Observation}
-%\theoremstyle{plain} \newtheorem{theorem}[definition]{Theorem}
+%\theoremstyle{plain} \newtheorem{theorem}[defini"tion]{Theorem}
 %\theoremstyle{plain} \newtheorem{lemma}[definition]{Lemma}
-%\renewcommand \qedsymbol {\ensuremath{\square}}
+%\renewcommand \qeds"ymbol {\ensuremath{\square}}
 % ...
 %%%%%
+
+\lstdefinestyle{haskell-style}{
+  language=Haskell,
+  inputencoding=utf8,
+  extendedchars=true,
+  alsodigit=!\$\%&*+-./:<=>?@^_~,
+  sensitive=true,
+  morecomment=[l]{--},
+  %% morecomment=[s]{(*}{*)},
+  morestring=[b]",
+  basicstyle=\small\ttfamily,
+  keywordstyle=\bf\ttfamily\color[rgb]{0,.3,.7},
+  commentstyle=\color[rgb]{0.133,0.545,0.133},
+  stringstyle={\color[rgb]{0.75,0.49,0.07}},
+  upquote=true,
+  breaklines=true,
+  breakatwhitespace=true,
+  columns=fullflexible,
+  keepspaces=true,
+  showstringspaces=false,
+  literate=*{`}{{`}}{1}
+           {->}{$\rightarrow{}$}{1}
+           {=>}{$\Rightarrow{}$}{1}
+}
 
 \lstdefinelanguage{Haleff}{
   morekeywords=[1]{forall, data, let, rec, and, in, val, type, Type, signature, effect, Effect, fn, if, then, else},
