Add description of 3rd chapter

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -20,8 +20,10 @@ W publikacjach pod tytułem ,,Build systems {\`a} la carte'' \cite{mokhov2018bui
 
 \section{O tej pracy}
 
-Celem tej pracy jest zapoznanie czytelnika, który miał dotychczas kontakt z językiem Haskell oraz podstawami języków funkcyjny, z nowatorskim rozwiązaniem jakim są efekty algebraiczne oraz zademonstrowanie -- idąc śladami Mokhov'a i innych \cite{mokhov2018build} -- implementacji systemów kompilacji z wykorzystaniem efektów algebraicznych i uchwytów w języku programowania Helium. Jak się okazuje, wykorzystanie tych narzędzi daje schludną implementację ale także prowadzi do problemów w implementacji systemów o pewnym sposobie determinowania zależności między zadaniami.
+Celem tej pracy jest zapoznanie czytelnika, który miał dotychczas kontakt z językiem Haskell oraz podstawami języków funkcyjny, z nowatorskim rozwiązaniem jakim są efekty algebraiczne oraz zademonstrowanie -- idąc śladami Mokhov'a i innych \cite{mokhov2018build, mokhov2020build} -- implementacji systemów kompilacji z wykorzystaniem efektów algebraicznych i uchwytów w języku programowania Helium. Jak się okazuje, wykorzystanie tych narzędzi daje schludną implementację ale także prowadzi do problemów w implementacji systemów o pewnym sposobie determinowania zależności między zadaniami.
 
 W rozdziale drugim wprowadzony zostaje prosty model obliczeń wykorzystujący efekty algebraiczne i uchwyty. Zostaje przedstawionych kilka przykładów reprezentacji standardowych efektów ubocznych w opisanym modelu.
+
+Celem rozdziału trzeciego jest wprowadzenie do ,,Build systems {\`a} la carte'', opisanie obserwacji poczynionych przez autorów i przedstawienie abstrakcji systemów kompilacji oraz ich konsekwencji. Treść źródłowego artykułu jest opisana w sposób dostateczny aby zrozumieć implementacje systemów z wykorzystaniem efektów i uchwytów przedstawione w rozdziale piątym. Czytelnik jest gorąco zachęcany do samodzielnego zapoznania się z całą treścią publikacji Mokhov'a i innych gdyż jest to bardzo dobra i łatwa w konsumpcji lektura.
 
 Rozdział czwarty rozpoczyna się zapoznaniem z istniejącymi językami oraz bibliotekami umożliwiającymi programowanie z efektami i uchwytami. Następnie omówiony jest język Helium oraz przykładowe problemy wraz z programami je rozwiązującymi, z użyciem efektów i uchwytów. Zademonstrowana jest ponadto łatwość wykorzystywania wielu efektów jednocześnie -- w bardziej przystępnej formie niż w przypadku monad w Haskellu.
